# python-selenium

./: .gitignore  main.py  pyproject.toml  requirements.txt
