[project]
name = "my_project"
version = "0.1.0"
description = ""
dependencies = [
    "attrs==23.2.0",
    "autopep8==2.3.2",
    "certifi==2024.7.4",
    "flake8==7.2.0",
    "h11==0.14.0",
    "idna==3.7",
    "mccabe==0.7.0",
    "mypy==1.16.0",
    "mypy-extensions==1.1.0",
    "outcome==1.3.0.post0",
    "pathspec==0.12.1",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pysocks==1.7.1",
    "ruff>=0.12.2",
    "selenium==4.23.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.26.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]

[tool.ruff]
line-length = 88
exclude = [
    "migrations",
    "tests",
    "docs",
    "build",
    "dist",
    "venv",
    ".venv",
    ".git",
    "__pycache__",
]
fix = true
unsafe-fixes = true
target-version = "py312"  # <- specify Python 3.12 explicitly here

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "F403",  # Wildcard import
    "F405",  # Name may be undefined, or defined from star imports
    "F841",  # Local variable is assigned to but never used
    "E501",  # Line too long
    "I",     # Import sorting (isort-compatible)
]
